packages installation and setup

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,25 @@
-APP_NAME=Laravel
+APP_NAME="Student Forum - Administrative Backend"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=student_forum_full_backend
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=student_forum_full_backend
+DB_PASSWORD=student_forum_full_backend
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=database
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=database
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -56,3 +56,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OCTANE_SERVER=swoole
+OCTANE_HTTPS=true
+
+SUPER_ADMIN_PSW=password
