--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "spatie/laravel-fractal": "^6.0",
         "spatie/laravel-markdown": "^2.2",
         "spatie/laravel-permission": "^5.8",
-        "spatie/laravel-settings": "^2.7"
+        "spatie/laravel-schemaless-attributes": "^2.4",
+        "spatie/laravel-settings": "^2.7",
+        "spatie/simple-excel": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
