--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "devDependencies": {
         "@alpinejs/focus": "^3.10.5",
+        "@defstudio/vite-livewire-plugin": "^1.0.7",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
@@ -16,5 +17,11 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@lottiefiles/lottie-player": "^1.7.1",
+        "chokidar": "^3.5.3",
+        "flatpickr": "^4.6.13",
+        "glob": "^8.1.0"
     }
 }
