--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "spatie/laravel-permission": "^5.9",
         "spatie/laravel-schemaless-attributes": "^2.4",
         "spatie/laravel-settings": "^2.7",
+        "spatie/period": "^2.3",
         "spatie/simple-excel": "^3.1"
     },
     "require-dev": {
