--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^8.2",
         "archtechx/enums": "^0.3.1",
+        "elgigi/commonmark-emoji": "^2.0",
+        "embed/embed": "^4.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/jetstream": "^2.16",
@@ -22,6 +24,7 @@
         "spatie/laravel-fractal": "dev-main",
         "spatie/laravel-markdown": "^2.2",
         "spatie/laravel-permission": "^5.9",
+        "spatie/laravel-prefixed-ids": "^1.3",
         "spatie/laravel-schemaless-attributes": "^2.4",
         "spatie/laravel-settings": "^2.7",
         "spatie/period": "^2.3",
