--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@lottiefiles/lottie-player": "^1.7.1",
         "chokidar": "^3.5.3",
         "flatpickr": "^4.6.13",
-        "glob": "^8.1.0"
+        "glob": "^8.1.0",
+        "shiki": "^0.14.1"
     }
 }
