--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Student Forum - Administrative Backend"
+APP_NAME="OpenForum - Administrative Backend"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
