--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -31,117 +31,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer a3v45ZbVaefg8c6h6d1kPDE'
-    controller: null
-    method: null
-    route: null
-    custom: [ ]
-  - httpMethods:
-      - GET
-    uri: api/events
-    metadata:
-      groupName: Endpoints
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: |-
-        Lists all events and return their representation, via Fractal's auto `include` features via this endpoint
-        activities can be easily retrieved.
-      description: |-
-        EXAMPLE:
-        <code>
-             <endpoint> -> returns all events
-             <endpoint>?include=activities -> returns all events and activities for each event
-        </code>
-      authenticated: true
-      custom: [ ]
-    headers:
-      Authorization: 'Bearer {YOUR_AUTH_KEY}'
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters: [ ]
-    cleanUrlParameters: [ ]
-    queryParameters: [ ]
-    cleanQueryParameters: [ ]
-    bodyParameters: [ ]
-    cleanBodyParameters: [ ]
-    fileParameters: [ ]
-    responses: [ ]
-    responseFields: [ ]
-    auth:
-      - headers
-      - Authorization
-      - 'Bearer 6Egdch64a8fVevDZ35Pkab1'
-    controller: null
-    method: null
-    route: null
-    custom: [ ]
-  - httpMethods:
-      - POST
-    uri: api/events/reserve
-    metadata:
-      groupName: Endpoints
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'Handle the reservation request of a user'
-      description: ''
-      authenticated: true
-      custom: [ ]
-    headers:
-      Authorization: 'Bearer {YOUR_AUTH_KEY}'
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters: [ ]
-    cleanUrlParameters: [ ]
-    queryParameters: [ ]
-    cleanQueryParameters: [ ]
-    bodyParameters:
-      reservations:
-        name: reservations
-        description: 'This field must contain 0 items.'
-        required: true
-        example: cum
-        type: 'string[]'
-        custom: [ ]
-      'reservations[].date':
-        name: 'reservations[].date'
-        description: 'Must be a valid date in the format <code>d/m/Y</code>.'
-        required: true
-        example: 18/02/2023
-        type: string
-        custom: [ ]
-      'reservations[].location':
-        name: 'reservations[].location'
-        description: ''
-        required: true
-        example: earum
-        type: string
-        custom: [ ]
-      'reservations[].absent':
-        name: 'reservations[].absent'
-        description: 'This field is required when <code>reservations.*.activity_reservations</code> is not present.'
-        required: false
-        example: true
-        type: boolean
-        custom: [ ]
-      'reservations[].activity_reservations':
-        name: 'reservations[].activity_reservations'
-        description: ''
-        required: false
-        example:
-          - deleniti
-        type: 'string[]'
-        custom: [ ]
-    cleanBodyParameters:
-      reservations: cum
-    fileParameters: [ ]
-    responses: [ ]
-    responseFields: [ ]
-    auth:
-      - headers
-      - Authorization
-      - 'Bearer 86Pvae4daZfgb53V6EDck1h'
+      - 'Bearer v1gd8Pakhfc63ZbeEa6V4D5'
     controller: null
     method: null
     route: null
