--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.11",
-        "rappasoft/laravel-livewire-tables": "^3.0",
+        "rappasoft/laravel-livewire-tables": "^2.11",
         "spatie/laravel-data": "^3.0",
-        "spatie/laravel-fractal": "dev-main",
+        "spatie/laravel-fractal": "^6.0.3",
         "spatie/laravel-markdown": "^2.2",
         "spatie/laravel-permission": "^5.9",
         "spatie/laravel-prefixed-ids": "^1.3",
@@ -41,20 +41,6 @@
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^2.0"
     },
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "rappasoft/laravel-livewire-tables",
-                "version": "3.0.1",
-                "source": {
-                    "type": "git",
-                    "url": "https://github.com/ebalo55/laravel-livewire-tables.git",
-                    "reference": "master"
-                }
-            }
-        }
-    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -92,9 +78,6 @@
         ]
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "10.x-dev"
-        },
         "laravel": {
             "dont-discover": []
         }
@@ -107,6 +90,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
