--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,7 +29,9 @@ jobs:
         mkdir -p database
         touch database/database.sqlite
     - name: Build assets
-      run: npm run build
+      run: | 
+        npm install
+        npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
