--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,11 +29,17 @@ jobs:
         mkdir -p database
         touch database/database.sqlite
     - name: Build assets
-      run: | 
+      run: |
         npm install
         npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      run: vendor/bin/phpunit --coverage-clover clover.xml
+    - name: Generate test coverage badge
+      uses: timkrase/phpunit-coverage-badge@latest
+      with:
+        coverage_badge_path: 'badge-coverage.svg'
+        push_badge: true
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
