--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.11",
+        "mhmiton/laravel-modules-livewire": "^1.5",
+        "nunomaduro/termwind": "^1.15",
         "nwidart/laravel-modules": "^10.0",
         "rappasoft/laravel-livewire-tables": "^2.11",
         "spatie/laravel-data": "^3.0",
@@ -29,6 +31,7 @@
         "spatie/laravel-schemaless-attributes": "^2.4",
         "spatie/laravel-settings": "^2.7",
         "spatie/period": "^2.3",
+        "spatie/regex": "^3.1",
         "spatie/simple-excel": "^3.1"
     },
     "require-dev": {
@@ -46,8 +49,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "Rappasoft\\LaravelLivewireTables\\": "vendor/rappasoft/laravel-livewire-tables/src"
+            "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "app/Helpers/index.php"
