--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -38,7 +38,7 @@ jobs:
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit --coverage-clover clover.xml
     - name: Generate test coverage badge
-      uses: timkrase/phpunit-coverage-badge@latest
+      uses: timkrase/phpunit-coverage-badge@v1.2.1
       with:
         coverage_badge_path: 'badge-coverage.svg'
         push_badge: true
