--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=student_forum_full_backend
-DB_USERNAME=student_forum_full_backend
-DB_PASSWORD=student_forum_full_backend
+DB_DATABASE=open_forum
+DB_USERNAME=open_forum
+DB_PASSWORD=open_forum
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=database
