--- a/fly.toml
+++ b/fly.toml
@@ -7,8 +7,8 @@ processes = []
 
 [build]
   [build.args]
-    NODE_VERSION = "14"
-    PHP_VERSION = "8.2"
+    NODE_VERSION = "18"
+  PHP_VERSION = "8.2"
 
 [env]
   APP_ENV = "production"
@@ -35,12 +35,17 @@ processes = []
     handlers = ["http"]
     port = 80
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
+[[services.ports]]
+handlers = ["tls", "http"]
+port = 443
 
-  [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
+[[services.tcp_checks]]
+grace_period = "1s"
+interval = "15s"
+restart_limit = 0
+timeout = "2s"
+
+[processes]
+app = ""
+cron = "cron -f"
+worker = "php artisan queue:work"
