--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "rappasoft/laravel-livewire-tables": "^2.11",
         "spatie/laravel-data": "^3.0",
         "spatie/laravel-fractal": "^6.0.3",
+        "spatie/laravel-mail-preview": "^6.0",
         "spatie/laravel-markdown": "^2.2",
         "spatie/laravel-permission": "^5.9",
         "spatie/laravel-prefixed-ids": "^1.3",
