--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432/tcp
     steps:
       - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
         with:
@@ -35,10 +37,6 @@ jobs:
         run: php artisan key:generate
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
-      - name: Create Database
-        run: |
-          mkdir -p database
-          touch database/database.sqlite
       - name: Build assets
         run: |
           npm install
@@ -46,7 +44,8 @@ jobs:
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DB_CONNECTION: pgsql
-          DB_PORT: 5432
+          DB_PORT: ${{ job.services.postgres.ports[5432] }}
+          DB_HOST: localhost
           DB_DATABASE: openforum
           DB_USERNAME: openforum
           DB_PASSWORD: openforum
