--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ OCTANE_HTTPS=true
 SUPER_ADMIN_USERNAME=admin
 SUPER_ADMIN_EMAIL=admin@example.com
 SUPER_ADMIN_PSW=password
+
+DATE_FORMAT="d/m/Y"
+TIME_FORMAT="H:i:s"
+DATETIME_FORMAT="${DATE_FORMAT} ${TIME_FORMAT}"
