--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "devDependencies": {
         "@alpinejs/focus": "^3.10.5",
         "@defstudio/vite-livewire-plugin": "^1.0.7",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.9",
         "alpinejs": "^3.0.6",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.2.7",
+        "tippy.js": "^6.3.7",
         "vite": "^4.0.0"
     },
     "dependencies": {
