fix: docker file, image and script update

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,10 +6,12 @@ storage/framework/cache/*
 storage/framework/sessions/*
 storage/framework/views/*
 storage/logs/*
-*.env*
 .rr.yml
 rr
 vendor
+.env
+*Docker*
+*docker*
 
 # 2. Ignore common files/directories we don't need
 .vscode
@@ -23,3 +25,9 @@ vendor
 **/*.log
 **/.DS_Store
 **/Thumbs.db
+
+
+/_ide_helper.php
+/.phpstorm.meta.php
+
+/gitlab-ci
