--- a/.env.example
+++ b/.env.example
@@ -60,4 +60,10 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 OCTANE_SERVER=swoole
 OCTANE_HTTPS=true
 
+SUPER_ADMIN_USERNAME=admin
+SUPER_ADMIN_EMAIL=admin@example.com
 SUPER_ADMIN_PSW=password
+
+DATE_FORMAT="d/m/Y"
+TIME_FORMAT="H:i:s"
+DATETIME_FORMAT="${DATE_FORMAT} ${TIME_FORMAT}"
